--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "fs-extra": "^11.3.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.11",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
