--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@eslint/js": "^9.30.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^3.10.2",
     "bcrypt": "^6.0.0",
     "eslint": "^9.30.1",
@@ -40,6 +41,7 @@
     "framer-motion": "^12.23.24",
     "globals": "^16.3.0",
     "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
     "vite": "^7.0.4"
   }
 }
